// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpCenterPaywall should render the component correctly "for" Pro legacy plan 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <svg
            class="svg pro"
            height="auto"
            viewBox="0 0 824 900"
            width="824"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
            />
          </svg>
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge upperCase"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge upperCase"
                >
                  Pro Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own Help Center in order to help users better understand your product and answer frequently asked questions.
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      aria-disabled="false"
                      class="wrapper fill primary medium"
                      type="button"
                    >
                      <span
                        class="wrapper"
                      >
                        Upgrade Your Plan
                        <i
                          class="material-icons icon isRight medium"
                        >
                          bolt
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Advanced" legacy plan 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <svg
            class="svg advanced"
            height="auto"
            viewBox="0 0 824 900"
            width="824"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
            />
          </svg>
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge upperCase"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge upperCase"
                >
                  Advanced Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own Help Center in order to help users better understand your product and answer frequently asked questions.
                  You can contact your customer success manager or do it from here to upgrade today!
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      aria-disabled="false"
                      class="wrapper fill primary medium"
                      type="button"
                    >
                      <span
                        class="wrapper"
                      >
                        Upgrade Your Plan
                        <i
                          class="material-icons icon isRight medium"
                        >
                          bolt
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Basic" legacy plan 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <svg
            class="svg basic"
            height="auto"
            viewBox="0 0 824 900"
            width="824"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
            />
          </svg>
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge upperCase"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge upperCase"
                >
                  Basic Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own Help Center in order to help users better understand your product and answer frequently asked questions.
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      aria-disabled="false"
                      class="wrapper fill primary medium"
                      type="button"
                    >
                      <span
                        class="wrapper"
                      >
                        Upgrade Your Plan
                        <i
                          class="material-icons icon isRight medium"
                        >
                          bolt
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Enterprise" legacy plan 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <svg
            class="svg enterprise"
            height="auto"
            viewBox="0 0 824 900"
            width="824"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
            />
          </svg>
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge upperCase"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge upperCase"
                >
                  Enterprise Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own Help Center in order to help users better understand your product and answer frequently asked questions.
                  Contact your customer success manager to upgrade today!
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      aria-disabled="false"
                      class="wrapper fill primary medium"
                      type="button"
                    >
                      <span
                        class="wrapper"
                      >
                        Contact Us
                        <i
                          class="material-icons icon isRight medium"
                        >
                          bolt
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for when the plan is unavailable 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <svg
            class="svg default"
            height="auto"
            viewBox="0 0 824 900"
            width="824"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0H374C622.528 0 824 201.472 824 450V450C824 698.528 622.528 900 374 900H0V0Z"
            />
          </svg>
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge upperCase"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge upperCase"
                >
                  Basic Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own Help Center in order to help users better understand your product and answer frequently asked questions.
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      aria-disabled="false"
                      class="wrapper fill primary medium"
                      type="button"
                    >
                      <span
                        class="wrapper"
                      >
                        Upgrade Your Plan
                        <i
                          class="material-icons icon isRight medium"
                        >
                          bolt
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
